# snake

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  GameManager.cpp  GameManager.h  LICENSE.md  README.md  Scoreboard.cpp  View.cpp  View.h  main.cpp
include/: Controller.h  GameManager.h  Scoreboard.h  View.h
src/: Controller.cpp  GameManager.cpp  Scoreboard.cpp  View.cpp  main.cpp
